examples/good/13-02-local-function.see
void main() {
  int fun() {
    return 10;
  }

  {
    int fun() {
      return 20;
    }
    printInt(fun());
  }

  {
    printInt(fun());
  }

}
