examples/bad/09-02-static-binding.see
void main() {
    void() fun = void lambda() => {
        int x = 2115;
        printInt(x);
    };

    printInt(x); // from where?

    return;
}
